--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ group 'com.brandmessenger.flutter_brandmessenger_sdk'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         jcenter()
@@ -10,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:8.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -22,7 +22,6 @@ rootProject.allprojects {
         mavenCentral()
         maven {
             url 'https://jitpack.io'
-            credentials { username authToken }
         }
     }
 }
@@ -31,7 +30,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion = 34
+    namespace 'com.brandmessenger.flutter_brandmessenger_sdk'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,11 +47,11 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
     }
 
     dependencies {
-        implementation 'com.github.lithiumtech.android-brandmessenger-sdk-dist:brandmessengercore:1.14.0'
-        implementation 'com.github.lithiumtech.android-brandmessenger-sdk-dist:brandmessengerui:1.14.0'
+        implementation 'com.khoros.android-brandmessenger-sdk:brandmessengercore:1.16.4'
+        implementation 'com.khoros.android-brandmessenger-sdk:brandmessengerui:1.16.4'
     }
 }
