--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_brandmessenger_sdk
 description: A new Flutter plugin project.
-version: 1.14.0
+version: 1.15.0
 homepage:
 
 environment:
@@ -16,6 +16,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter_brandmessenger_sdk:
+  git:
+    url: git@github.com:lithiumtech/flutter_brandmessenger_sdk.git
+    ref: 1.15.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
